--- a/Home-page.html
+++ b/Home-page.html
@@ -55,7 +55,7 @@
   <pe class="menu-a"> <a style="color:#fff;" href="Signup.html">     Creat an account    </a></pe>'
  </br> <b class="dbtn"><b>Or<i>ggf</i></b>
   
-  <pe class="menu-a"><a style="color:#fff;" href="menu.html">     Use as a guest  </a></pe></b>
+  <pe class="menu-a"><a style="color:#fff;" href="index.html">     Use as a guest  </a></pe></b>
       </pe>
   </nav>
        <br/> </div>
