--- a/menu.html
+++ b/menu.html
@@ -141,9 +141,9 @@
               
       </div>
    </body>
-  <p style="font-size:0.4cm;
+  <p11 style="font-size:0.4cm;
   color:#fff;
   "> © 2023 - 2024 KBZ Golden Bangla™
-  Global Inc.<br/> Version: 00.0.01.1
-  </p> </center>
+  Global Inc.<p/11></br></p12> Version: 00.0.01.1
+  </p12> </center>
   </html>
