--- a/menu.html
+++ b/menu.html
@@ -141,9 +141,7 @@
               
       </div>
    </body>
-  <p11 style="font-size:0.4cm;
-  color:#fff;
-  "> © 2023 - 2024 KBZ Golden Bangla™
-  Global Inc.<p/11></br></p12> Version: 00.0.01.1
+  <p11"> © 2023 - 2024 KBZ Golden Bangla™
+  Global Inc.</p11></br><p12> Version: 00.0.01.1
   </p12> </center>
   </html>
