--- a/menu.html
+++ b/menu.html
@@ -140,7 +140,7 @@
           </div>
               
       </div>
-   </body>
+    </body><center>
   <p11 id="p12"> © 2023 - 2024 KBZ Golden Bangla™
   Global Inc.</p11></br><p12 id="p12"> Version: 00.0.01.1
   </p12> </center>
