--- a/About.html
+++ b/About.html
@@ -16,7 +16,7 @@
      <h1 style="color: green;">╰═💜═K══B══K═╯     </h1>
             <br/>
      
-        <img style="width: 308px; height: 300px;" src="mypic.jpg"  />
+        <img style="width: 308px; height: 300px;" src="pic.jpg"  />
 <name>𝐁𝐃. 𝐂𝐀𝐏𝐓𝐀𝐈𝐍 𝐊𝐁𝐙.      </name>  </div> 
        <br/>  <br/>
        
