--- a/Home-page.html
+++ b/Home-page.html
@@ -34,7 +34,7 @@
      <h1 style="color: green;">╰═💜═K══B══K═╯     </h1>
             <br/>
     <div style="border:5px solid pink;">
-        <img style="width: 308px; height: 300px;" src="mypic.jpg"  />
+        <img style="width: 308px; height: 300px;" src="pic.jpg"  />
 <p>𝐁𝐃. 𝐂𝐀𝐏𝐓𝐀𝐈𝐍 𝐊𝐁𝐙. </p>
     </div>        
             </div>
