--- a/menu.html
+++ b/menu.html
@@ -80,7 +80,7 @@
   
   </label>
     </p1></br></br></div></br>
-    <button class="glowing" ><a class="btn" href="mssg.html" target="_blank">ffrg<p2>Send</p2>tgrt</a></button>
+    <button class="glowing" ><a class="btn" href="https://wa.me/message/IARZDNGJAZVBD1" target="_blank">ffrg<p2>Send</p2>tgrt</a></button>
     </h>
     <br/><br/><br/>
   <center>
