--- a/Verify-msg.html
+++ b/Verify-msg.html
@@ -22,7 +22,7 @@
    2. তথ্য ভুল হলে ভেরিফিকেশন হবে না।<br><br>
     3.ভেরিফিকেশন সেন্ড করার ১০মিনিট থেকে ১ঘন্টার মধ্যে <br> আপনাকে আইডি কোড সহ একটি ই-মেইল করা হবে।<br><br>
     4.ভেরিফিকেশন সেন্ড করার ১০মিনিট থেকে ১ঘন্টার মধ্যে <br> ই-মেইল না পেলে নিচে দেওয়া হোয়াটসঅ্যাপে জানাবেন।<br><br>
-    Thank you.<br>
+    Thank you.<br><p>https://kamrul2003.github.io/BD.-Captain-KBZ/index.html</p>
     </p><br>
    <button class="btn1" style="font-size:2cm;"><a style="text-decoration: none; color:#fff;" 
     href="https://wa.me/message/IARZDNGJAZVBD1"> 
