--- a/Verify-msg.html
+++ b/Verify-msg.html
@@ -22,14 +22,14 @@
    2. তথ্য ভুল হলে ভেরিফিকেশন হবে না।<br><br>
     3.ভেরিফিকেশন সেন্ড করার ১০মিনিট থেকে ১ঘন্টার মধ্যে <br> আপনাকে আইডি কোড সহ একটি ই-মেইল করা হবে।<br><br>
     4.ভেরিফিকেশন সেন্ড করার ১০মিনিট থেকে ১ঘন্টার মধ্যে <br> ই-মেইল না পেলে নিচে দেওয়া হোয়াটসঅ্যাপে জানাবেন।<br><br>
-    Thank you.<br><a href="https://kamrul2003.github.io/BD.-Captain-KBZ/index.html" target="_blank ">go</p>
+    Thank you.<br>
     </p><br>
    <button class="btn1" style="font-size:2cm;"><a style="text-decoration: none; color:#fff;" 
     href="https://wa.me/message/IARZDNGJAZVBD1"> 
     WhatsApp </a></button><br><br><br><br><br><br><br><br><br><br>
   
   <br><br><br><br><br><br><br><br><br><br>
-   <button class="btn2" style="left:70%;position:relative; " ><a style="text-decoration: none; color:#fff;" href="https://kamrul2003.github.io/BD.-Captain-KBZ/index.html"> Next </a></button>
+   <button class="btn2" style="left:70%;position:relative; " ><a style="text-decoration: none; color:#fff;" href="index.html"> Back to home </a></button>
   
   </body>
 </html>
