--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li><a href="Home-page.html">Home</a></li>
         <li><a href="About.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
-        <li><a href="Verify-msg.html">User Dashboard</a></li>
+        <li><a href="App-home-page.html">User Dashboard</a></li>
         
     </ul>
 </nav>
