--- a/App-home-page.html
+++ b/App-home-page.html
@@ -27,7 +27,7 @@
       <button class="btn1"><a style="text-decoration: none; color:#fff;" href="Signup.html"> Add an user </a></button>
     <br><br><p class="signup" style="left:-20px;"> If you not verifyed !
     </p>
-      <button class="btn2"  ><a style="text-decoration: none; color:#fff;" href="Verify-user-id.html"> Verify your ID </a></button>
+      <button class="btn2"  ><a style="text-decoration: none; color:#fff;" href="Verify-msg.html"> Verify your ID </a></button>
     <br><br>
     <p class="signup" style="left:-90px;"> If you have an account ! </p>
       <button class="btn2" ><a style="text-decoration: none; color:#fff;" href="Temp-login.html"> Login </a></button>
