--- a/Signup.html
+++ b/Signup.html
@@ -14,19 +14,19 @@
       <h1>Registeration</h1>
       <p>Register with your real information</p>
       </br></br>
-      1. Enter User Name 👤. 
+      👤 Enter User Name. 
       <input type="text" name="user_name"class="user_name" id="input" placeholder="Username" required>
-      2. Enter User Number 📱.
+      📱 Enter User Number.
       <input type="number" name="user_number"class="user_number" id="input" placeholder="Phone number" required>
-      3. Enter User E-mail 📧. 
+      📧 Enter User E-mail. 
       <input type="email" name="user_email"class="user_email" id="input" placeholder="Email address" required>
-      4. Enter User Password 🔑. 
+      🔑 Enter User Password. 
       <input type="password" name="user_password"class="user_password" id="input" placeholder="Password" required>
-      5. Enter User Con-password 🔑. 
+      🔑 Enter User Con-password. 
       <input type="password" name="user_conf_password"class="user_confpassword" id="input" placeholder="Confirm password" required>
-      6. Enter Referel Name 👥. 
+      👥 Enter Referel Name. 
       <input type="text" name="user_ref_name"class="user_ref_name" id="input" placeholder="Referel name" required>
-      7. Enter Referel ID Code 🔖. 
+      🔖 Enter Referel ID Code. 
       <input type="number" name="user_ref_code"class="user_ref_code" id="input" placeholder="Referel ID-code" required>
       </br></br>
       <button type="submit">Create account</button>
