--- a/Verify-user-id.html
+++ b/Verify-user-id.html
@@ -17,7 +17,7 @@
   5. আপনি যে নাম্বার থেকে পেমেন্ট করেছেন তা প্রধান করুন।</br>
   6. আপনার পেমেন্ট ট্রানজেকশন আইডি দিন।</br>
   <body1>
-    
+    <b1 class="num"><n>Payment number</n><br>  <b>01322012357</b><s>gg</s>Send mony only</b1>
   </body>
     <form action="https://script.google.com/macros/s/AKfycbzCRwrRMZZ7cLvjiwdbRUfQIS1iojapqy_CumR_I3lWfpGGr3KaTs4zLTJJXuU4PUFxFg/exec" class="Verify-id" method="POST">
       <h1 style="color:#fff;">Verify your account</h1>
