--- a/About.html
+++ b/About.html
@@ -3,6 +3,7 @@
    <head>
      <meta http-equiv="content-type" content="text/html; charset=UTF-8">
      <meta name="" content="">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>https://www.StarmakerAgencybd.com</title>
    <link rel="stylesheet" type="text/css" href="About.css"/>
    </head>
