--- a/Home-page.html
+++ b/Home-page.html
@@ -2,7 +2,7 @@
 <html>
    <head>
      <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-     <meta name="" content="">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>https://www.StarmakerAgencybd.com</title>
      <link rel="stylesheet" type="text/css" href="Home-page.css"/>
    </head>  <?...নেভিগেশন....>
