--- a/Verify-msg.html
+++ b/Verify-msg.html
@@ -29,7 +29,7 @@
     WhatsApp </a></button><br><br><br><br><br><br><br><br><br><br>
   
   <br><br><br><br><br><br><br><br><br><br>
-   <button class="btn2" style="left:70%;position:relative; " ><a style="text-decoration: none; color:#fff;" href="index.html"> Back to home </a></button>
+   <button class="btn2" style="left:70%;position:relative; " ><a style="text-decoration: none; color:#fff;" href="Verify-user-id.html"> Back to home </a></button>
   
   </body>
 </html>
