--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <i id="tag">BD. CAPTAIN KBZ</i>
         <li><a href="Home-page.html">Home</a></li>
         <li><a href="About.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="ndex.html">Contact</a></li>
         <li><a href="App-home-page.html">User Dashboard</a></li>
         
     </ul>
